tests/invalid/type/return_self_alias.pts
prototype Box {
    function set(int x) : void {
        Box me = self;
        return me;
    }
}
